# adventofcode

./: .gitignore  LICENSE.txt  README.md
2015/day01/src/: main.rs
2015/day03/src/: pointset.h
2015/day04/: CMakeLists.txt
2015/day06/src/: main.rs
2015/day07/src/: circuit.cc  circuit.hh
2015/day09/: Cargo.toml
2015/day10/: CMakeLists.txt
2015/day10/src/: CMakeLists.txt  main.cc
2015/day11/: Cargo.toml
2015/day11/src/: main.rs
2015/day12/: Cargo.toml
2015/day12/src/: main.rs
2015/day13/: Cargo.toml
2015/day13/src/: main.rs
2015/day14/: Cargo.toml
2015/day14/src/: main.rs
2015/day15/: Cargo.toml
2015/day15/src/: main.rs
2015/day16/: Cargo.toml
2015/day16/src/: main.rs
2015/day17/: Cargo.toml
2015/day17/src/: main.rs
2015/day18/: Cargo.toml
2015/day18/src/: main.rs
2015/day19/: Cargo.toml
2015/day19/src/: main.rs
2015/day2/src/: main.rs
2015/day20/: Cargo.toml
2015/day20/src/: main.rs
2015/day21/: main.py  pyproject.toml
2015/day22/: Cargo.toml
2015/day22/src/: main.rs
2015/day23/: Cargo.toml
2015/day23/src/: main.rs
2015/day24/: Cargo.toml
2015/day24/src/: main.rs
2015/day25/: Cargo.toml
2015/day25/src/: main.rs
2015/day3/: CMakeLists.txt
2015/day3/src/: main.c  pointset.c
2015/day4/src/: main.cc
2015/day5/src/: main.rs
2015/day6/: Cargo.toml
2015/day7/: CMakeLists.txt
2015/day7/src/: main.cc
2015/day8/: CMakeLists.txt
2015/day8/src/: main.cc
2015/day9/src/: main.rs
2016/day01/: Cargo.toml
2016/day01/src/: main.rs
2016/day02/: Cargo.toml
2016/day02/src/: main.rs
2016/day03/: CMakeLists.txt
2016/day03/src/: main.cc
2016/day04/: .clang-tidy  CMakeLists.txt
2016/day04/src/: main.cc
2016/day05/: .clang-repl-history  CMakeLists.txt
2016/day05/src/: main.cc
2016/day06/: Cargo.toml
2016/day06/src/: main.rs
2016/day07/: Cargo.toml
2016/day07/src/: main.rs
2016/day08/: Cargo.toml
2016/day08/src/: main.rs
2016/day09/: Cargo.toml
2016/day09/src/: main.rs
2016/day10/: Cargo.toml
2016/day10/src/: main.rs
2016/day11/: Cargo.toml
2016/day11/src/: main.rs  parser.rs  solver.rs
2016/day12/: Cargo.toml
2016/day12/src/: main.rs
2016/day13/: Cargo.toml
2016/day13/src/: main.rs
2016/day14/: Cargo.toml
2016/day14/src/: main.rs
2016/day15/: Cargo.toml
2016/day15/src/: main.rs
2016/day16/: Cargo.toml
2016/day16/src/: main.rs
2016/day17/: Cargo.toml
2016/day17/src/: main.rs
2016/day18/: Cargo.toml
2016/day18/src/: main.rs
2016/day19/src/: main.rs
2016/day20/: Cargo.toml
2016/day20/src/: main.rs
2016/day21/: Cargo.toml
2016/day21/src/: main.rs
2016/day22/: Cargo.toml
2016/day22/src/: main.rs
2016/day23/: Cargo.toml
2016/day23/src/: main.rs
2016/day24/: Cargo.toml
2016/day24/src/: main.rs
2016/day25/: Cargo.toml
2016/day25/src/: main.rs
2017/day01/: Cargo.toml
2017/day01/src/: main.rs
2017/day02/: Cargo.toml
2017/day02/src/: main.rs
2017/day03/: Cargo.toml
2017/day03/src/: main.rs
2017/day04/: Cargo.toml
2017/day04/src/: main.rs
2017/day05/: Cargo.toml
2017/day05/src/: day5.rs  main.rs
2017/day06/: Cargo.toml
2017/day06/src/: day6.rs  main.rs
2017/day07/: Cargo.toml
2017/day07/src/: day7.rs  main.rs
2017/day08/: Cargo.toml
2017/day08/src/: day8.rs  main.rs
2022/day01/: CMakeLists.txt
2022/day04/src/: main.cc
2022/day06/src/: main.cc
2022/day07/src/: main.cc
2022/day08/src/: main.c  point_set.c  point_set.h
2022/day09/src/: main.cc
2022/day10/: Cargo.toml
2022/day10/src/: main.rs
2022/day11/: CMakeLists.txt
2022/day11/src/: main.cc  monkey.cc  monkey.h
2022/day12/: CMakeLists.txt
2022/day12/src/: dijkstra.cc  dijkstra.h  main.cc  util.h
2022/day13/: CMakeLists.txt
2022/day13/src/: main.cc
2022/day14/: Cargo.toml
2022/day14/src/: main.rs
2022/day15/: CMakeLists.txt
2022/day15/src/: main.cc
2022/day16/: CMakeLists.txt
2022/day16/src/: main.cc
2022/day2/src/: main.cc
2022/day3/: CMakeLists.txt
2022/day5/: CMakeLists.txt
2022/day5/src/: main.cc
2022/day6/: CMakeLists.txt
2022/day7/: CMakeLists.txt
2022/day8/: CMakeLists.txt
2022/day9/: CMakeLists.txt
2023/day01/src/: main.cc
2023/day03/: CMakeLists.txt
2023/day04/src/: card.cc  card.h
2023/day05/src/: main.rs  seedmap.rs
2023/day06/src/: main.rs
2023/day1/: CMakeLists.txt
2023/day2/src/: game.rs  main.rs
2023/day3/src/: main.cc
2023/day4/: CMakeLists.txt
2023/day4/src/: main.cc
2023/day7/: Cargo.toml
2023/day7/src/: main.rs
2024/day01/src/: main.rs
2024/day02/: Cargo.toml
2024/day04/src/: main.rs
2024/day05/: Cargo.toml
2024/day06/: Cargo.toml
2024/day07/src/: main.rs
2024/day09/: Cargo.toml
2024/day09/src/: main.rs
2024/day1/: Cargo.toml
2024/day1/src/: main.rs
2024/day10/: Cargo.toml
2024/day10/src/: main.rs
2024/day11/: Cargo.toml
2024/day11/src/: main.rs
2024/day12/: Cargo.toml
2024/day12/src/: main.rs
2024/day13/: Cargo.toml
2024/day13/src/: main.rs
2024/day14/: Cargo.toml
2024/day14/src/: main.rs
2024/day14/vis/: Cargo.toml
2024/day15/: Cargo.toml
2024/day15/src/: main.rs
2024/day16/: Cargo.toml
2024/day16/src/: main.rs
2024/day17/: Cargo.toml
2024/day17/src/: main.rs
2024/day18/: Cargo.toml
2024/day18/src/: main.rs
2024/day19/: Cargo.toml
2024/day19/src/: main.rs
2024/day2/src/: main.rs
2024/day20/: Cargo.toml
2024/day20/src/: main.rs
2024/day21/: Cargo.toml
2024/day21/src/: main.rs
2024/day22/: Cargo.toml
2024/day23/: Cargo.toml
2024/day24/: Cargo.toml
2024/day25/: Cargo.toml
2024/day3/: Cargo.toml
2024/day4/: Cargo.toml
2024/day7/: Cargo.toml
2024/day8/: Cargo.toml
2025/day01/: Cargo.toml
2025/day02/: Cargo.toml
2025/day03/: Cargo.toml
2025/day04/: Cargo.toml
2025/day05/: Cargo.toml
2025/day06/: Cargo.toml
2025/day07/: Cargo.toml
2025/day08/: Cargo.toml
2025/day09/: Cargo.toml
2025/day10/: Cargo.toml
2025/day11/: Cargo.toml
2025/day12/: Cargo.toml
day1/src/: main.cc
day2/: CMakeLists.txt
day3/src/: main.cc
day4/: CMakeLists.txt
(+27 files in other folders)
