cmake_minimum_required(VERSION 3.20)
project(aoc2023d3 LANGUAGES CXX)

add_executable(aoc2023d3 src/main.cc)
target_include_directories(aoc2023d3 PRIVATE src)
set_target_properties(aoc2023d3 PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
if(MSVC)
    target_compile_options(aoc2023d3 PRIVATE /W4)
else()
    target_compile_options(aoc2023d3 PRIVATE -Wall -Wextra -pedantic)
endif()
